fixed about me spacing with header

--- a/src/AboutMe.css
+++ b/src/AboutMe.css
@@ -2,20 +2,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* align-content: flex-start; */
   justify-content: space-evenly;
   padding: 45px 45px;
-  border: 2px solid black;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   justify-content: center;
   /* width: 75%; */
   border-radius: 4px;
 height: 1000px;
 
 
+
 }
 
 .self-img {
-  border: 2px solid black;
+border: 2px solid black;
 border-radius: 50%;
 margin: 60px 60px;
 }
@@ -27,6 +28,7 @@ margin: 60px 60px;
   letter-spacing: 3px; 
   font-family: 'Raleway', sans-serif;
   margin-bottom: 20px;
+  margin-top: -600px;
 }
 
 /* .skills-tools-title {
